--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Nityasha Malik",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cashfree-pg": "^5.0.8",
+    "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "core-js": "^3.43.0",
     "cross-env": "^7.0.3",
