--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "core-js": "^3.43.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -55,6 +56,6 @@
     "rimraf": "^6.0.1"
   },
   "engines": {
-    "node": "^10"
+    "node": "^18"
   }
 }
